--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
                 <div class="news-item">
 
                     <div><strong>雨天時の対応</strong><br>
-                    屋外イベントは体育館・教室に変更となります。開催は予定通り行います。</div>
+                    縁日は1体での開催となります。開催は予定通り行います。</div>
                 </div>
 
 
