--- a/index.html
+++ b/index.html
@@ -603,6 +603,10 @@
                         <div class="schedule-content">＜第一体育館＞吹奏楽部</div>
                     </div>
                     <div class="schedule-item">
+                        <div class="schedule-time">14:00~14:30</div>
+                        <div class="schedule-content">＜生徒玄関前＞書道部</div>
+                    </div>
+                    <div class="schedule-item">
                         <div class="schedule-time">15:30-16:00</div>
                         <div class="schedule-content">＜第一体育館＞結果発表</div>
                     </div>
