--- a/index.html
+++ b/index.html
@@ -653,17 +653,17 @@
                 <h2>🏪 クラス別出店一覧</h2>
                 <div class="festival-item">
                     <div class="festival-title">1-1　大場社長のたこ焼き屋</div>
-                    <div>たこ焼き</div>
+                    <div>たこ焼き（4個）</div>
                     <div style="margin-top: 10px; color: #666; font-size: 1.1rem;"> 価格：300円</div>
                 </div>
                 <div class="festival-item">
                     <div class="festival-title">1-2　谷山なげなげ屋〜谷あり山あり</div>
-                    <div>輪投げ</div>
+                    <div>輪投げ（1回4投）</div>
                     <div style="margin-top: 10px; color: #666; font-size: 1.1rem;">価格：100円</div>
                 </div>
                 <div class="festival-item">
                     <div class="festival-title">1-3　カズエおばさんのベビーカステラ</div>
-                    <div>ベビーカステラ</div>
+                    <div>ベビーカステラ（5個）</div>
                     <div style="margin-top: 10px; color: #666; font-size: 1.1rem;">価格：初回300円（2個目トッピングから＋50円）</div>
                 </div>
                 <div class="festival-item">
@@ -678,7 +678,7 @@
                 </div>
                 <div class="festival-item">
                     <div class="festival-title">1-6　吉井の漢焼きおにぎり</div>
-                    <div>焼きおにぎり</div>
+                    <div>焼きおにぎり（2個）</div>
                     <div style="margin-top: 10px; color: #666; font-size: 1.1rem;">価格：醤油300円、バター350円、ガーリックバター350円</div>
                 </div>
                 <div class="festival-item">
@@ -688,12 +688,12 @@
                 </div>
                 <div class="festival-item">
                     <div class="festival-title">1-8　ムラタピロシ飲料</div>
-                    <div>タピオカ</div>
+                    <div>タピオカ（ナタデココ）</div>
                     <div style="margin-top: 10px; color: #666; font-size: 1.1rem;">価格：M250円、L300円</div>
                 </div>
                 <div class="festival-item">
                     <div class="festival-title">2-1　あやぽて</div>
-                    <div>フライドポテト</div>
+                    <div>フライドポテト（塩・コンソメ・チーズ）</div>
                     <div style="margin-top: 10px; color: #666; font-size: 1.1rem;">価格：300円</div>
                 </div>
                 <div class="festival-item">
@@ -714,7 +714,7 @@
                 <div class="festival-item">
                     <div class="festival-title">2-5　JUNTREE</div>
                     <div>飲み物</div>
-                    <div style="margin-top: 10px; color: #666; font-size: 1.1rem;">価格：1杯180円、トッピング50円</div>
+                    <div style="margin-top: 10px; color: #666; font-size: 1.1rem;">価格：1杯180円、トッピング+50円</div>
                 </div>
                 <div class="festival-item">
                     <div class="festival-title">2-6　ナカタヘルニア肉店〜腰にくる旨さ〜</div>
