--- a/index.html
+++ b/index.html
@@ -771,7 +771,12 @@
                 <div class="news-item">
 
                     <div><strong>雨天時の対応</strong><br>
-                    縁日は1体での開催となります。開催は予定通り行います。</div>
+                    縁日は2体での開催となります。開催は予定通り行います。</div>
+                </div>
+                 <div class="news-item">
+
+                    <div><strong>水筒などの飲み物について</strong><br>
+                    2・3年生は自教室、1年生は新館のクラス展示掲示場所に置き、体育館外で飲むようにして下さい。</div>
                 </div>
 
 
