--- a/index.html
+++ b/index.html
@@ -770,6 +770,10 @@
                     出場クラス・出場順は以下の通りです。
                     ①1年7組　②2年5組　③3年2組　④3年4組　⑤3年1組　⑥3年3組　⑦3年5組　⑧3年7組</div>
                 </div>
+
+                    <div><strong>縁日について</strong><br>
+                    販売は9時15分〜とし、火の使用は朝HRの後〜とします。</div>
+                </div>
                     
                     <div><strong>熱中症対策について</strong><br>
                     気温が上がることが予想されます。暑さ対策を各自徹底してください。</div>
