--- a/index.html
+++ b/index.html
@@ -771,7 +771,7 @@
                     <div><strong>熱中症対策について</strong><br>
                     気温が上がることが予想されます。暑さ対策を各自徹底してください。</div>
                 </div>
-
+                  <div class="news-item">
              <div><strong>仮装ダンスの決勝について</strong><br>
                     出場クラス・出場順は以下の通りです。
                     ①1年7組　②2年5組　③3年2組　④3年4組　⑤3年1組　⑥3年3組　⑦3年5組　⑧3年7組</div>
