--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
                     <div><strong>縁日について</strong><br>
                     販売は9時15分〜とし、火の使用は朝HRの後〜とします。</div>
                 </div>
-                    
+                  <div class="news-item">
                     <div><strong>熱中症対策について</strong><br>
                     気温が上がることが予想されます。暑さ対策を各自徹底してください。</div>
                 </div>
