--- a/index.html
+++ b/index.html
@@ -774,7 +774,8 @@
                   <div class="news-item">
              <div><strong>仮装ダンスの決勝について</strong><br>
                     <p>出場クラス・出場順は以下の通りです。</p>
-                    <p>①1年7組　②2年5組　③3年2組　④3年4組　⑤3年1組　⑥3年3組　⑦3年5組　⑧3年7組</p></div>
+                    <p>①1年7組　②2年5組　③3年2組　④3年4組　⑤3年1組　⑥3年3組　⑦3年5組　⑧3年7組</p>
+             </div>
                 </div>
 
                 <div class="news-item">
