--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
                 
                  <div class="news-item">
                     <div><strong>縁日について</strong><br>
-                    販売は9時15分〜とし、火の使用は朝HRの後〜とします。</div>
+                    <p>販売は9時15分〜とし、火の使用は朝HRの後〜とします。</p>ゴミはしっかりと分別してください。</div>
                 </div>
                   <div class="news-item">
                     <div><strong>熱中症対策について</strong><br>
