--- a/index.html
+++ b/index.html
@@ -765,7 +765,7 @@
                 
                  <div class="news-item">
                     <div><strong>縁日について</strong><br>
-                    <p>販売は9時15分〜とし、火の使用は朝HRの後〜とします。</p>ゴミはしっかりと分別してください。</div>
+                    <p>販売は9時15分〜とし、火の使用は朝HRの後〜とします。<br>ゴミはしっかりと分別してください。</p></div>
                 </div>
                   <div class="news-item">
                     <div><strong>熱中症対策について</strong><br>
@@ -785,7 +785,7 @@
                  <div class="news-item">
 
                     <div><strong>水筒などの飲み物について</strong><br>
-                    2・3年生は自教室、1年生は新館のクラス展示掲示場所に置き、体育館外で飲むようにして下さい。</div>
+                    2・3年生は自教室、1年生は新館のクラス展示掲示場所に置き、体育館外で飲むようにして下さい。1体では飲食しないようにしてください。</div>
                 </div>
 
 
