--- a/index.html
+++ b/index.html
@@ -765,7 +765,8 @@
                 
                  <div class="news-item">
                     <div><strong>縁日について</strong><br>
-                    <p>販売は9時15分〜とし、火の使用は朝HRの後〜とします。<br>ゴミはしっかりと分別してください。</p></div>
+                    <p>販売は9時15分〜とし、火の使用は朝HRの後〜とします。<br>ゴミはしっかりと分別してください。</p>
+                    </div>
                 </div>
                   <div class="news-item">
                     <div><strong>熱中症対策について</strong><br>
