--- a/index.html
+++ b/index.html
@@ -574,6 +574,7 @@
             <button class="nav-btn active" onclick="showSection('schedule')">日程</button>
             <button class="nav-btn" onclick="showSection('festival')">縁日</button>
             <button class="nav-btn" onclick="showSection('news')">お知らせ</button>
+            <button class="nav-btn" onclick="showSection('result')">結果</button>
         </div>
     </nav>
 
@@ -788,7 +789,13 @@
                     <div><strong>水筒などの飲み物について</strong><br>
                     2・3年生は自教室、1年生は新館のクラス展示掲示場所に置き、体育館外で飲むようにして下さい。1体では飲食しないようにしてください。</div>
                 </div>
-
+                <section id="result" class="section">
+            <div class="card scroll-animate">
+            <h2>結果</h2>
+                <div class="result-item">
+                    <div><strong>垂れ幕</strong><br>
+                    <p>1年</p>
+                    </div>
 
 
             </div>
