--- a/index.html
+++ b/index.html
@@ -639,6 +639,31 @@
                     </div>
                 </div>
             </div>
+                       <div class="day-card">
+                <h3>📅 7月10日（木）体育祭</h3>
+                <div id="day2-schedule">
+                    <div class="schedule-item">
+                        <div class="schedule-time">8:50~</div>
+                        <div class="schedule-content">開会式</div>
+                    </div>
+                    <div class="schedule-item">
+                        <div class="schedule-time">9:15~</div>
+                        <div class="schedule-content">午前の部</div>
+                    </div>
+                    <div class="schedule-item">
+                        <div class="schedule-time">12:30~</div>
+                        <div class="schedule-content">昼休憩</div>
+                    </div>
+                    <div class="schedule-item">
+                        <div class="schedule-time">13:30~</div>
+                        <div class="schedule-content">午後の部</div>
+                    </div>
+                    <div class="schedule-item">
+                        <div class="schedule-time">16:00~</div>
+                        <div class="schedule-content">SHR</div>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section id="festival" class="section">
