--- a/index.html
+++ b/index.html
@@ -648,7 +648,7 @@
                     </div>
                     <div class="schedule-item">
                         <div class="schedule-time">9:15~</div>
-                        <div class="schedule-content">午前の部</div>
+                        <div class="schedule-content">午前の部（綱引き・クラス代表リレー・大縄跳び）</div>
                     </div>
                     <div class="schedule-item">
                         <div class="schedule-time">12:30~</div>
@@ -656,7 +656,7 @@
                     </div>
                     <div class="schedule-item">
                         <div class="schedule-time">13:30~</div>
-                        <div class="schedule-content">午後の部</div>
+                        <div class="schedule-content">午後の部（部活動対抗リレー・ダイスハリケーン・玉入れ・クラス対抗リレー）</div>
                     </div>
                     <div class="schedule-item">
                         <div class="schedule-time">16:00~</div>
@@ -819,7 +819,7 @@
             <h2>結果</h2>
                 <div class="result-item">
                     <div><strong>垂れ幕</strong><br>
-                    <p>1年</p>
+                    <p>1年　最優秀賞 7組　優秀賞 5組　優良賞 8組</p>
                     </div>
 
 
