--- a/index.html
+++ b/index.html
@@ -816,7 +816,7 @@
                 </div>
                 <section id="result" class="section">
             <div class="card scroll-animate">
-            <h2>結果</h2>
+            <h2 class="result-title">🎤 結果</h2>
                 <div class="result-item">
                     <div><strong>垂れ幕</strong><br>
                     <p>1年　最優秀賞 7組　優秀賞 5組　優良賞 8組</p>
