--- a/index.html
+++ b/index.html
@@ -814,7 +814,9 @@
                     <div><strong>水筒などの飲み物について</strong><br>
                     2・3年生は自教室、1年生は新館のクラス展示掲示場所に置き、体育館外で飲むようにして下さい。1体では飲食しないようにしてください。</div>
                 </div>
+                
                 <section id="result" class="section">
+              <div class="result-hero">
             <div class="card scroll-animate">
             <h2 class="result-title">🎤 結果</h2>
                 <div class="result-item">
