--- a/index.html
+++ b/index.html
@@ -819,8 +819,13 @@
             <div class="card scroll-animate">
                 <h2>🎤 結果</h2>
                 <div class="result-item">
-                    <div><strong>垂れ幕</strong><br>
-                    <p>1年　最優秀賞 7組　優秀賞 5組　優良賞 8組</p>
+                <div class="result-category">
+                    <h3>垂れ幕</h3>
+                    <div class="result-details">
+                            <p><strong>1年生部門</strong></p>
+                            <p>🥇 最優秀賞: 7組</p>
+                            <p>🥈 優秀賞: 5組</p>
+                            <p>🥉 優良賞: 8組</p>
                     </div>
                 </div>
             </div>
