--- a/index.html
+++ b/index.html
@@ -471,6 +471,46 @@
             0%, 100% { opacity: 1; }
             50% { opacity: 0.7; }
         }
+        .result-item {
+            background: white;
+            border: 2px solid #e8e8e8;
+            padding: 25px;
+            border-radius: 12px;
+            margin: 20px 0;
+            border-left: 6px solid #000000;
+            position: relative;
+            transform: translateY(20px);
+            opacity: 0;
+            animation: newsFloat 0.6s ease-out forwards;
+        }
+
+        .result-item:nth-child(1) { animation-delay: 0.1s; }
+        .result-item:nth-child(2) { animation-delay: 0.3s; }
+        .result-item:nth-child(3) { animation-delay: 0.5s; }
+
+        @keyframes newsFloat {
+            to { opacity: 1; transform: translateY(0); }
+        }
+
+        .result-item:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 15px 30px rgba(0,0,0,0.1);
+            border-left-width: 10px;
+            transition: all 0.3s ease;
+        }
+
+        .result-date {
+            font-size: 1rem;
+            color: #1e3c72;
+            font-weight: bold;
+            margin-bottom: 10px;
+            animation: datePulse 2s ease-in-out infinite;
+        }
+
+        @keyframes datePulse {
+            0%, 100% { opacity: 1; }
+            50% { opacity: 0.7; }
+        }
 
         .contact-info {
             background: linear-gradient(135deg, #1e3c72, #2a5298);
