--- a/index.html
+++ b/index.html
@@ -858,9 +858,9 @@
                 <section id="result" class="section">
             <div class="card scroll-animate">
                 <h2>🎤 結果</h2>
-                <div class="news-item">
+                <div class="result-item">
                     <h3>垂れ幕</h3>
-                    <div class="news-item">
+                    <div class="result-item">
                             <p><strong>1年生部門</strong></p>
                             <p>🥇 最優秀賞: 7組</p>
                             <p>🥈 優秀賞: 5組</p>
