--- a/index.html
+++ b/index.html
@@ -854,6 +854,7 @@
                     <div><strong>水筒などの飲み物について</strong><br>
                     2・3年生は自教室、1年生は新館のクラス展示掲示場所に置き、体育館外で飲むようにして下さい。1体では飲食しないようにしてください。</div>
                 </div>
+        </section>
                 
                 <section id="result" class="section">
             <div class="card scroll-animate">
@@ -868,7 +869,6 @@
                 </div>
             </div>
          </div>
-    </div>
 </section> 
             </main>
 
