--- a/index.html
+++ b/index.html
@@ -866,16 +866,19 @@
                             <p>🥇 最優秀賞: 7組</p>
                             <p>🥈 優秀賞: 5組</p>
                             <p>🥉 優良賞: 8組</p>
+                    </div>
                     <div class="result-item">
                             <p><strong>2年生部門</strong></p>
                             <p>🥇 最優秀賞：6組</p>
                             <p>🥈 優秀賞：5組</p>
                             <p>🥉 優良賞：4組</p>
+                    </div>
                     <div class="result-item">
                             <p><strong>3年生部門</strong></p>
                             <p>🥇 最優秀賞：5組</p>
                             <p>🥈 優秀賞：2組</p>
                             <p>🥉 優良賞：7組</p>
+                    </div>
                 </div>
             </div>
          </div>
