--- a/index.html
+++ b/index.html
@@ -880,6 +880,26 @@
                             <p>🥉 優良賞：7組</p>
                     </div>
                 </div>
+                <div class="result-item">
+                <h3>クラス展示</h3>
+                <div class="result-item">
+                            <p><strong>1年生部門</strong></p>
+                            <p>🥇 最優秀賞: 6組</p>
+                            <p>🥈 優秀賞: 1組</p>
+                            <p>🥉 優良賞: 8組</p>
+                    </div>
+                    <div class="result-item">
+                            <p><strong>2年生部門</strong></p>
+                            <p>🥇 最優秀賞：5組</p>
+                            <p>🥈 優秀賞：1組</p>
+                            <p>🥉 優良賞：3組</p>
+                    </div>
+                    <div class="result-item">
+                            <p><strong>3年生部門</strong></p>
+                            <p>🥇 最優秀賞：6組</p>
+                            <p>🥈 優秀賞：7組</p>
+                            <p>🥉 優良賞：3組</p>
+                    </div>
             </div>
          </div>
 </section> 
