--- a/index.html
+++ b/index.html
@@ -900,6 +900,13 @@
                             <p>🥈 優秀賞：7組</p>
                             <p>🥉 優良賞：3組</p>
                     </div>
+                     <div class="result-item">
+                <h3>仮装ダンス</h3>
+                <div class="result-item">
+                            <p>🥇 最優秀賞: 3年3組</p>
+                            <p>🥈 優秀賞: 3年7組</p>
+                            <p>🥉 優良賞: 3年2組、3年4組</p>
+                </div>
             </div>
          </div>
 </section> 
