--- a/index.html
+++ b/index.html
@@ -902,11 +902,12 @@
                     </div>
                      <div class="result-item">
                 <h3>仮装ダンス</h3>
+                    <div class="result-irtem">
                             <p>🥇 最優秀賞: 3年3組</p>
                             <p>🥈 優秀賞: 3年7組</p>
                             <p>🥉 優良賞: 3年2組、3年4組</p>
+                    </div>
                      </div>
-            </div>
          </div>
 </section> 
             </main>
