--- a/index.html
+++ b/index.html
@@ -900,6 +900,7 @@
                             <p>🥈 優秀賞：7組</p>
                             <p>🥉 優良賞：3組</p>
                     </div>
+                </div>
                 <div class="result-item">
                 <h3>仮装ダンス</h3>
                 <div class="result-irtem">
