--- a/index.html
+++ b/index.html
@@ -858,7 +858,7 @@
                 
                 <section id="result" class="section">
             <div class="card scroll-animate">
-                <h2>🎤 結果</h2>
+                <h2>🏆 結果</h2>
                 <div class="result-item">
                     <h3>垂れ幕</h3>
                     <div class="result-item">
@@ -909,6 +909,27 @@
                             <p>🥉 優良賞: 3年2組、3年4組</p>
                  </div>
                  </div>
+                                <div class="result-item">
+                <h3>総合</h3>
+                <div class="result-item">
+                            <p><strong>総合の部</strong></p>
+                            <p>🥇 優勝: 3年7組</p>
+                            <p>🥈 準優勝: 3年5組</p>
+                            <p>🥉 3位: 3年2組</p>
+                    </div>
+                    <div class="result-item">
+                            <p><strong>1年生部門</strong></p>
+                            <p>🥇 優勝：7組</p>
+                            <p>🥈 準優勝：5組</p>
+                            <p>🥉 3位：6組</p>
+                    </div>
+                    <div class="result-item">
+                            <p><strong>2年生部門</strong></p>
+                            <p>🥇 最優秀賞：5組</p>
+                            <p>🥈 優秀賞：6組</p>
+                            <p>🥉 優良賞：1組</p>
+                    </div>
+                </div>
          </div>
 </section> 
             </main>
