--- a/index.html
+++ b/index.html
@@ -912,7 +912,7 @@
                                 <div class="result-item">
                 <h3>総合</h3>
                 <div class="result-item">
-                            <p><strong>総合の部</strong></p>
+                            <p><strong>総合部門</strong></p>
                             <p>🥇 優勝: 3年7組</p>
                             <p>🥈 準優勝: 3年5組</p>
                             <p>🥉 3位: 3年2組</p>
