--- a/index.html
+++ b/index.html
@@ -925,9 +925,9 @@
                     </div>
                     <div class="result-item">
                             <p><strong>2年生部門</strong></p>
-                            <p>🥇 最優秀賞：5組</p>
-                            <p>🥈 優秀賞：6組</p>
-                            <p>🥉 優良賞：1組</p>
+                            <p>🥇 優勝：5組</p>
+                            <p>🥈 準優勝：6組</p>
+                            <p>🥉 3位：1組</p>
                     </div>
                 </div>
          </div>
