--- a/index.html
+++ b/index.html
@@ -858,7 +858,7 @@
                 
                 <section id="result" class="section">
             <div class="card scroll-animate">
-                <h2>🏆 結果</h2>
+                <h2>🏆 結果（文化祭）</h2>
                 <div class="result-item">
                     <h3>垂れ幕</h3>
                     <div class="result-item">
@@ -932,6 +932,11 @@
                 </div>
          </div>
 </section> 
+         <section id="result" class="section">
+            <div class="card scroll-animate">
+                <h2>🏆 結果（体育祭）</h2>
+            </div>
+         </section>
             </main>
 
 
