--- a/index.html
+++ b/index.html
@@ -930,11 +930,14 @@
                             <p>🥉 3位：1組</p>
                     </div>
                 </div>
-         </div>
-    </section> 
+             </div>
+        </section> 
          <section id="result" class="section">
             <div class="card scroll-animate">
                 <h2>🏆 結果（体育祭）</h2>
+                <div class="result-item">
+                <h3>綱引き</h3>
+                </div>
             </div>
          </section>
      </main>
