--- a/index.html
+++ b/index.html
@@ -856,7 +856,7 @@
                 </div>
         </section>
                 
-      <section id="result" class="section">
+      <section id="result-culture" class="section">
             <div class="card scroll-animate">
                 <h2>🏆 結果（文化祭）</h2>
                 <div class="result-item">
@@ -933,7 +933,7 @@
             </div>
         </section> 
         
-         <section id="result" class="section">
+         <section id="result-sports" class="section">
             <div class="card scroll-animate">
                 <h2>🏆 結果（体育祭）</h2>
             </div>
