--- a/index.html
+++ b/index.html
@@ -992,71 +992,71 @@
       <section id="result-culture" class="section">
             <div class="card scroll-animate">
                 <h2>🏆 結果（文化祭）</h2>
-                <div class="result-item">
+                <div class="result-culture-item">
                     <h3>垂れ幕</h3>
-                    <div class="result-item">
+                    <div class="resultculture-item">
                             <p><strong>1年生部門</strong></p>
                             <p>🥇 最優秀賞: 7組</p>
                             <p>🥈 優秀賞: 5組</p>
                             <p>🥉 優良賞: 8組</p>
                     </div>
-                    <div class="result-item">
+                    <div class="result-culture-item">
                             <p><strong>2年生部門</strong></p>
                             <p>🥇 最優秀賞：6組</p>
                             <p>🥈 優秀賞：5組</p>
                             <p>🥉 優良賞：4組</p>
                     </div>
-                    <div class="result-item">
+                    <div class="result-culture-item">
                             <p><strong>3年生部門</strong></p>
                             <p>🥇 最優秀賞：5組</p>
                             <p>🥈 優秀賞：2組</p>
                             <p>🥉 優良賞：7組</p>
                     </div>
                 </div>
-                <div class="result-item">
+                <div class="result-culture-item">
                 <h3>クラス展示</h3>
-                <div class="result-item">
+                <div class="result-culture-item">
                             <p><strong>1年生部門</strong></p>
                             <p>🥇 最優秀賞: 6組</p>
                             <p>🥈 優秀賞: 1組</p>
                             <p>🥉 優良賞: 8組</p>
                     </div>
-                    <div class="result-item">
+                    <div class="result-culture-item">
                             <p><strong>2年生部門</strong></p>
                             <p>🥇 最優秀賞：5組</p>
                             <p>🥈 優秀賞：1組</p>
                             <p>🥉 優良賞：3組</p>
                     </div>
-                    <div class="result-item">
+                    <div class="result-culture-item">
                             <p><strong>3年生部門</strong></p>
                             <p>🥇 最優秀賞：6組</p>
                             <p>🥈 優秀賞：7組</p>
                             <p>🥉 優良賞：3組</p>
                     </div>
                 </div>
-                <div class="result-item">
+                <div class="result-culture-item">
                 <h3>仮装ダンス</h3>
-                <div class="result-irtem">
+                <div class="result-culture-item">
                             <p>🥇 最優秀賞: 3年3組</p>
                             <p>🥈 優秀賞: 3年7組</p>
                             <p>🥉 優良賞: 3年2組、3年4組</p>
                  </div>
                  </div>
-                 <div class="result-item">
+                 <div class="result-culture-item">
                 <h3>総合</h3>
-                <div class="result-item">
+                <div class="result-culture-item">
                             <p><strong>総合部門</strong></p>
                             <p>🥇 優勝: 3年7組</p>
                             <p>🥈 準優勝: 3年5組</p>
                             <p>🥉 3位: 3年2組</p>
                     </div>
-                    <div class="result-item">
+                    <div class="result-culture-item">
                             <p><strong>1年生部門</strong></p>
                             <p>🥇 優勝：7組</p>
                             <p>🥈 準優勝：5組</p>
                             <p>🥉 3位：6組</p>
                     </div>
-                    <div class="result-item">
+                    <div class="result-culture-item">
                             <p><strong>2年生部門</strong></p>
                             <p>🥇 優勝：5組</p>
                             <p>🥈 準優勝：6組</p>
